--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 :root {
     --bg-color: #fff;
     --secondary-bg-color: #eeeeee;
@@ -12,6 +11,7 @@
     --tag-color: #424242;
     --blockquote-text-color: #858585;
     --blockquote-border-color: #dfe2e5;
+    --filter: invert(35%) sepia(1%) saturate(0%) hue-rotate(175deg) brightness(99%) contrast(86%);
     scroll-padding-top: 100px;
 }
 
@@ -27,6 +27,7 @@ html[data-theme='dark'] {
     --tag-color: rgb(191, 191, 191);
     --blockquote-text-color: #808080;
     --blockquote-border-color: #424242;
+    --filter: invert(67%) sepia(73%) saturate(0%) hue-rotate(185deg) brightness(103%) contrast(84%);
 }
 
 html {
@@ -41,6 +42,26 @@ body {
     width: 100%;
     margin: 0 auto 30px auto;
     background-color: var(--bg-color);
+}
+
+table,
+td,
+th {
+    border: solid 1px var(--blockquote-text-color);
+}
+
+table {
+    margin: 0 0 1.5em;
+    table-layout: fixed;
+    border-collapse: separate;
+    border-spacing: 0;
+    border-width: 1px 0 0 1px;
+}
+
+td,
+th {
+    padding: .375em;
+    border-width: 0 1px 1px 0;
 }
 
 p {
@@ -103,85 +124,45 @@ a:active {
     color: #2660ab;
 }
 
+
 /*basic styles ends*/
-/*animation starts*/
 
-.animated {
-    transition: top .8s linear;
-    -webkit-animation-duration: 1s;
-    -moz-animation-duration: 1s;
-    -ms-animation-duration: 1s;
-    -o-animation-duration: 1s;
-    animation-duration: 1s;
-}
-
-.animated.hinge {
-    -webkit-animation-duration: 1s;
-    -moz-animation-duration: 1s;
-    -ms-animation-duration: 1s;
-    -o-animation-duration: 1s;
-    animation-duration: 1s;
-}
-
-@-webkit-keyframes fadeInDown {
-    0% {
-        -webkit-transform: translateY(-20px);
-    }
-
-    100% {
-        -webkit-transform: translateY(0);
-    }
-}
-
-@-moz-keyframes fadeInDown {
-    0% {
-        -moz-transform: translateY(-20px);
-    }
-
-    100% {
-        -moz-transform: translateY(0);
-    }
-}
-
-@-o-keyframes fadeInDown {
-    0% {
-        -o-transform: translateY(-20px);
-    }
-
-    100% {
-        -o-transform: translateY(0);
-    }
-}
-
-@keyframes fadeInDown {
-    0% {
-        transform: translateY(-20px);
-    }
-
-    100% {
-        transform: translateY(0);
-    }
-}
-
-.fadeInDown {
-    -webkit-animation-name: fadeInDown;
-    -moz-animation-name: fadeInDown;
-    -o-animation-name: fadeInDown;
-    animation-name: fadeInDown;
-}
-
-/*animation ends*/
 .content {
     height: auto;
     float: right;
     width: 60%;
     margin-top: 60px;
+    position: absolute;
+    left: 20%;
+}
+
+.copyright-footer {
+    position: absolute;
+    bottom: 0px;
+    text-align: center;
+    width: 100%;
+}
+
+.small {
+    font-size: 80%;
+    font-weight: 400;
+    margin: 5px;
+}
+
+.small a {
+    text-decoration: none;
+    letter-spacing: 1px;
+    color: #2660ab;
+}
+
+.small a:hover {
+    color: #2F69B3;
 }
 
 .page-top {
     width: 60%;
     position: fixed;
-    right: 0;
+    left: 20%;
     z-index: 3;
     background-color: var(--bg-color);
     height: 60px;
@@ -197,7 +178,51 @@ a:active {
     width: calc(100% - 30px);
 }
 
+.page-top .translations {
+    position: absolute;
+    display: none;
+    background-color: var(--secondary-bg-color);
+    box-shadow: 0 8px 16px rgba(10, 10, 10, .1);
+    padding: .5rem 0;
+    display: none;
+    margin-top: 60px;
+    list-style: none;
+    font-size: 12px;
+    right: 0px;
+}
+
+.page-top .translations.is-active {
+    /* display: block; */
+    display: block;
+}
+
+.page-top .translations li {
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: block;
+    line-height: 2.5;
+    padding: .5rem .75rem;
+    position: relative;
+    text-align: center;
+    font-size: 1.3em;
+}
+
+.page-top .translations a {
+    color: var(--nav-text-color);
+}
+
+.page-top .translations a.current {
+    padding-bottom: 22px;
+    border-bottom: none;
+}
+
+.page-top .translations a:hover {
+    color: #2660ab;
+}
+
 .page-top .nav li {
+    font-size: 1.3em;
     position: relative;
     display: initial;
     padding-right: 20px;
@@ -215,12 +240,6 @@ a:active {
     color: var(--nav-text-color);
     padding-bottom: 22px;
     border-bottom: 1px solid var(--nav-text-color);
-}
-
-.theme-switch-item {
-    float: right;
-    font-size: 2em;
-    margin-top: -5px;
 }
 
 .page-top .information {
@@ -251,7 +270,7 @@ a:active {
 }
 
 .sidebar {
-    width: 40%;
+    width: 20%;
     -webkit-background-size: cover;
     background-size: cover;
     background-color: var(--bg-color);
@@ -261,6 +280,19 @@ a:active {
     position: fixed;
     z-index: 4;
     border-right: 1px solid var(--border-color);
+}
+
+.rightbar {
+    width: 20%;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-color: var(--bg-color);
+    height: 100%;
+    top: 0;
+    right: 0;
+    position: fixed;
+    z-index: 4;
+    border-left: 1px solid var(--border-color);
 }
 
 .sidebar .logo-title {
@@ -282,7 +314,6 @@ a:active {
 }
 
 .sidebar .logo-title .title h3 {
-    text-transform: uppercase;
     font-size: 2rem;
     font-weight: bold;
     letter-spacing: 2px;
@@ -513,17 +544,11 @@ a:active {
     right: 6px;
 }
 
-#disqus_thread {
-    margin: 30px;
-    border-bottom: 1px solid var(--border-color);
-}
-
 .footer {
     clear: both;
     text-align: center;
     font-size: 10px;
     margin: 0 auto;
-    bottom: 0;
     position: absolute;
     width: 100%;
     padding-bottom: 20px;
@@ -587,59 +612,6 @@ a:active {
     display: inline-flex;
 }
 
-.evernote {
-    width: 32px;
-    height: 32px;
-    border-radius: 300px;
-    background-color: #3E3E3E;
-    margin-right: 5px;
-}
-
-.evernote a {
-    color: #fff;
-    padding: 11px;
-    font-size: 12px;
-}
-
-.evernote a:hover {
-    color: #ED6243;
-    padding: 11px;
-}
-
-.weibo {
-    width: 32px;
-    height: 32px;
-    border-radius: 300px;
-    background-color: #ED6243;
-    margin-right: 5px;
-}
-
-.weibo a {
-    color: #fff;
-    padding: 9px;
-}
-
-.weibo a:hover {
-    color: #BD4226;
-}
-
-.twitter {
-    width: 32px;
-    height: 32px;
-    border-radius: 300px;
-    background-color: #59C0FD;
-    margin-right: 5px;
-}
-
-.twitter a {
-    color: #fff;
-    padding: 9px;
-}
-
-.twitter a:hover {
-    color: #4B9ECE;
-}
-
 /* about */
 .about {
     margin: 30px;
@@ -680,11 +652,6 @@ a:active {
     max-width: 100px;
     padding-left: 40px;
     float: left;
-}
-
-/* Facebook Comments */
-#fb_comments_container {
-    margin: 30px;
 }
 
 /* Buttons */
@@ -814,29 +781,87 @@ a.btn {
     display: none;
 }
 
-@media screen and (max-width: 960px),
-print {
+.page-top .title {
+    display: none;
+}
+
+.navbar-translate {
+    cursor: pointer;
+    display: block;
+    height: 60px;
+    position: absolute;
+    width: 60px;
+    margin-left: auto;
+    right: 40px;
+}
+
+.page-top .nav li.theme-switch-item {
+    float: right;
+    font-size: 2em;
+    margin-top: -5px;
+    cursor: pointer;
+    height: 60px;
+    width: 60px;
+    right: 0px;
+    top: 0px;
+    padding: 0px;
+    padding-top: 5px;
+    position: absolute;
+}
+
+img.navbar {
+    width: 20px;
+    height: 20px;
+    padding: 18px;
+    filter: var(--filter);
+}
+
+.sidebar img.social {
+    width: 30px;
+    height: 30px;
+    filter: var(--filter);
+}
+
+@media screen and (max-width: 1700px) {
+    .rightbar {
+        display: none;
+    }
+    .page-top {
+        width: 80%;
+    }
+    .content {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 1350px), print {
+    .page-top .title {
+        position: fixed;
+        width: min-content;
+        display: block;
+        height: 60px;
+    }
+    .page-top .title h3 {
+        font-weight: bold;
+        letter-spacing: 2px;
+        line-height: 1;
+        margin: 1em;
+    }
+    .page-top .title a {
+        text-decoration: none;
+        color: var(--heading-color);
+        font-size: 2rem;
+        font-weight: bold;
+    }
     .sidebar {
-        width: 100%;
-        position: absolute;
-        border-right: none;
-        z-index: 1;
+        display: none;
     }
-
-    .sidebar .logo-title {
-        padding-top: 120px;
+    .rightbar {
+        display: none;
     }
-
-    .sidebar .logo-title .title img {
-        width: 100px;
-    }
-
-    .sidebar .logo-title .title h3 {
-        font-size: 20px;
-    }
-
     .page-top {
         width: 100%;
+        left: 0;
     }
 
     .post-title h3 {
@@ -844,10 +869,10 @@ print {
     }
 
     .content {
-        margin-top: 420px;
         width: 100%;
         z-index: 2;
         position: absolute;
+        left: 0;
     }
 
     .footer {
@@ -857,7 +882,12 @@ print {
     .share {
         display: grid;
     }
-
+    .page-top .translations {
+        margin-top: 0px;
+        position: relative;
+        float: left;
+        width: 100%;
+    }
     .page-top .nav {
         background-color: var(--secondary-bg-color);
         box-shadow: 0 8px 16px rgba(10, 10, 10, .1);
@@ -880,7 +910,6 @@ print {
         line-height: 2.5;
         padding: .5rem .75rem;
         position: relative;
-        text-transform: uppercase;
         text-align: center;
         font-size: 1.3em;
     }
@@ -892,84 +921,21 @@ print {
     .navbar-burger {
         cursor: pointer;
         display: block;
-        height: 3.25rem;
+        height: 60px;
         position: relative;
-        width: 3.25rem;
+        width: 60px;
         margin-left: auto;
     }
 
-    .navbar-burger span {
-        background-color: var(--heading-color);
-        display: block;
-        height: 1px;
-        left: calc(50% - 8px);
-        position: absolute;
-        transform-origin: center;
-        transition-duration: 86ms;
-        transition-property: background-color, opacity, transform;
-        transition-timing-function: ease-out;
-        width: 16px;
-    }
-
-    .navbar-burger span:nth-child(1) {
-        top: calc(50% - 6px);
-    }
-
-    .navbar-burger span:nth-child(2) {
-        top: calc(50% - 1px);
-    }
-
-    .navbar-burger span:nth-child(3) {
-        top: calc(50% + 4px);
-    }
-
-    .theme-switch-item {
+    .page-top .nav li.theme-switch-item {
         float: none;
+        right: auto;
+        top: auto;
+        padding: inherit;
+        position: relative;
+        width: auto;
+        margin-top: -15px;
     }
-}
-
-/* Medium zoom */
-.medium-zoom-overlay {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 300ms;
-    will-change: opacity;
-    background: var(--bg-color);
-}
-
-.medium-zoom--opened .medium-zoom-overlay {
-    cursor: pointer;
-    cursor: zoom-out;
-    opacity: 1;
-}
-
-.medium-zoom-image {
-    cursor: pointer;
-    cursor: zoom-in;
-    /*
-      The `transition` is marked as "!important" for the animation to happen
-      even though it's overriden by another inline `transition` style attribute.
-      This is problematic with frameworks that generate inline styles on their
-      images (e.g. Gatsby).
-      See https://github.com/francoischalifour/medium-zoom/issues/110
-     */
-    transition: transform 300ms cubic-bezier(0.2, 0, 0.2, 1) !important;
-    z-index: 100;
-}
-
-.medium-zoom-image--hidden {
-    visibility: hidden;
-}
-
-.medium-zoom-image--opened {
-    position: relative;
-    cursor: pointer;
-    cursor: zoom-out;
-    will-change: transform;
 }
 
 @media print {
