--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,18 +2,17 @@
 <html lang="{{- site.Language.Lang -}}" data-theme="{{- .Site.Params.displayMode -}}">
 {{- partial "head.html" . -}}
 <body>
-
-{{- partial "sidebar.html" . -}}
-<div class="main">
-    {{ partial "navbar.html" . }}
-    <div class="autopagerize_page_element">
-        <div class="content">
-            {{- block "main" . }}{{- end }}
+    {{- partial "sidebar.html" . -}}
+    <div class="main">
+        {{ partial "navbar.html" . }}
+        <div class="autopagerize_page_element">
+            <div class="content">
+                {{- block "main" . }}{{- end }}
+                {{- partial "footer.html" . -}}
+            </div>
         </div>
     </div>
-</div>
-
-{{- partial "footer.html" . -}}
+    <div class="rightbar"></div>
 </body>
 
 </html>
