--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
     {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
     {{ range $paginator.Pages }}
-        <div class="post animated fadeInDown">
+        <div class="post">
             <div class="post-title">
                 <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a>
                 </h3>
@@ -11,10 +11,9 @@
 
                 <div class="p_part"><p></p></div>
             </div>
-            <div class="post-footer">
-                <div class="meta">
-                    <div class="info"><em class="fa fa-sun-o"></em><span
-                                class="date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+    <div class="post-footer">
+        <div class="meta">
+                    <div class="info"><span class="date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
                         {{ with .Params.tags }}
                             {{- range $index, $el := . -}}
                                 <a class="tag"
